Incorporacion de presupuestos mixtos al modulo dental Cambio de version a la 1.3.0.2

--- a/centro medico/RDLC/default/DentalPresupuesto.rdlc
+++ b/centro medico/RDLC/default/DentalPresupuesto.rdlc
@@ -9,25 +9,28 @@
               <Width>2.11091in</Width>
             </TablixColumn>
             <TablixColumn>
+              <Width>0.65092in</Width>
+            </TablixColumn>
+            <TablixColumn>
               <Width>0.47926in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.92727in</Width>
+              <Width>0.76404in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.95761in</Width>
+              <Width>0.79789in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.73362in</Width>
+              <Width>0.67711in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.61789in</Width>
+              <Width>0.46511in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.72206in</Width>
+              <Width>0.59012in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.77759in</Width>
+              <Width>0.59703in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -55,6 +58,43 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>textbox2</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>DimGray</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <BackgroundColor>#1c3a70</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox10">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Dentición</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                                <Color>White</Color>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox10</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>DimGray</Color>
@@ -367,6 +407,40 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
+                    <Textbox Name="TipoDenticion">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=IIF(Fields!TipoDenticion.Value=0,"Temporal", "Definitiva")</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>TipoDenticion</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>DimGray</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
                     <Textbox Name="PiezasInvolucradas">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -637,9 +711,10 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>5</ColSpan>
+                    <ColSpan>6</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -749,6 +824,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -776,9 +852,9 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>OdontTrat_LineasPresupuesto</DataSetName>
-        <Top>2.17663cm</Top>
+        <Top>2.17662cm</Top>
         <Height>0.76522in</Height>
-        <Width>7.32621in</Width>
+        <Width>7.13239in</Width>
         <Style />
       </Tablix>
       <Textbox Name="Textbox20">
@@ -796,7 +872,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox20</rd:DefaultName>
-        <Top>0.42027cm</Top>
+        <Top>0.42026cm</Top>
         <Left>1.94945cm</Left>
         <Height>0.6cm</Height>
         <Width>2.12958cm</Width>
@@ -826,7 +902,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox21</rd:DefaultName>
-        <Top>0.42027cm</Top>
+        <Top>0.42026cm</Top>
         <Left>4.11431cm</Left>
         <Height>0.6cm</Height>
         <Width>8.62772cm</Width>
@@ -856,7 +932,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox22</rd:DefaultName>
-        <Top>1.16138cm</Top>
+        <Top>1.16137cm</Top>
         <Left>2.79612cm</Left>
         <Height>0.6cm</Height>
         <Width>1.28292cm</Width>
@@ -888,7 +964,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>1.12611cm</Top>
+        <Top>1.1261cm</Top>
         <Left>4.07903cm</Left>
         <Height>0.6cm</Height>
         <Width>2.5cm</Width>
@@ -907,7 +983,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
     <Height>4.74782cm</Height>
     <Style />
   </Body>
-  <Width>18.60857cm</Width>
+  <Width>18.96294cm</Width>
   <Page>
     <PageHeader>
       <Height>1.1811in</Height>
@@ -921,7 +997,7 @@ FormatPercent(Fields!DescuentoPercent.Value / (Fields!Importe.Value + Fields!Des
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>= "Presupuesto " &amp; Parameters!Num.Value</Value>
+                  <Value>"Presupuesto"</Value>
                   <Style>
                     <FontFamily>Tahoma</FontFamily>
                     <FontSize>18pt</FontSize>
@@ -1116,12 +1192,16 @@ FROM d_Presupuesto D
           <DataField>DescuentoPercent</DataField>
           <rd:TypeName>System.Double</rd:TypeName>
         </Field>
+        <Field Name="TipoDenticion">
+          <DataField>TipoDenticion</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>centro_medico</rd:DataSetName>
         <rd:TableName>OdontTrat</rd:TableName>
         <rd:ObjectDataSourceSelectMethod>LineasPresupuesto</rd:ObjectDataSourceSelectMethod>
-        <rd:ObjectDataSourceType>centro_medico.OdontTrat, IncemeDental.DSOdontograma.Designer.vb, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:ObjectDataSourceType>centro_medico.OdontTrat, UI.Dental.DSOdontograma.Designer.vb, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
     <DataSet Name="dsClinica">
@@ -1190,12 +1270,6 @@ FROM d_Presupuesto D
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
-  <ReportParameters>
-    <ReportParameter Name="Num">
-      <DataType>String</DataType>
-      <Prompt>ReportParameter1</Prompt>
-    </ReportParameter>
-  </ReportParameters>
   <Language>en-US</Language>
   <ConsumeContainerWhitespace>true</ConsumeContainerWhitespace>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
