--- a/centro medico/RDLC/default/CitasListado.rdlc
+++ b/centro medico/RDLC/default/CitasListado.rdlc
@@ -6,7 +6,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>0.74052cm</Width>
+              <Width>1.0051cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.74952cm</Width>
@@ -21,13 +21,16 @@
               <Width>1.23034cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>5.41043cm</Width>
+              <Width>5.14585cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.62687cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>4.04964cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.63229cm</Width>
+              <Width>2.10312cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>2.10974cm</Width>
@@ -36,7 +39,7 @@
               <Width>3.78764cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.74082cm</Width>
+              <Width>2.55021cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -252,6 +255,43 @@
                       </Paragraphs>
                       <rd:DefaultName>textbox19</rd:DefaultName>
                       <ZIndex>12</ZIndex>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <BackgroundColor>Gainsboro</BackgroundColor>
+                        <VerticalAlign>Middle</VerticalAlign>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox6">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>DNI</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox6</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -694,6 +734,44 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
+                    <Textbox Name="DNI">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!DNI.Value</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Left</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>DNI</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <TopBorder>
+                          <Color>DimGray</Color>
+                        </TopBorder>
+                        <VerticalAlign>Middle</VerticalAlign>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
                     <Textbox Name="MEDICO">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -897,10 +975,10 @@
                       <TablixBody>
                         <TablixColumns>
                           <TablixColumn>
-                            <Width>6.88254cm</Width>
+                            <Width>6.83609cm</Width>
                           </TablixColumn>
                           <TablixColumn>
-                            <Width>21.2547cm</Width>
+                            <Width>21.20825cm</Width>
                           </TablixColumn>
                         </TablixColumns>
                         <TablixRows>
@@ -1069,9 +1147,10 @@
                         </TopBorder>
                       </Style>
                     </Tablix>
-                    <ColSpan>11</ColSpan>
+                    <ColSpan>12</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -1088,6 +1167,7 @@
         </TablixBody>
         <TablixColumnHierarchy>
           <TablixMembers>
+            <TablixMember />
             <TablixMember />
             <TablixMember />
             <TablixMember />
@@ -1132,7 +1212,7 @@
         <DataSetName>centro_medico_CITA</DataSetName>
         <Left>0.09844in</Left>
         <Height>2.6411cm</Height>
-        <Width>28.13724cm</Width>
+        <Width>28.04434cm</Width>
         <Style>
           <Border>
             <Color>DimGray</Color>
@@ -1145,7 +1225,7 @@
     <Height>2.6411cm</Height>
     <Style />
   </Body>
-  <Width>28.38728cm</Width>
+  <Width>28.29437cm</Width>
   <Page>
     <PageHeader>
       <Height>1.3061in</Height>
@@ -1418,6 +1498,10 @@
         <Field Name="ImporteDr">
           <DataField>ImporteDr</DataField>
           <rd:TypeName>System.Double</rd:TypeName>
+        </Field>
+        <Field Name="DNI">
+          <DataField>DNI</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
