--- a/centro medico/RDLC/custom/virgen_del_pilar/TPVFacturaVentas.rdlc
+++ b/centro medico/RDLC/custom/virgen_del_pilar/TPVFacturaVentas.rdlc
@@ -1311,7 +1311,7 @@ WHERE        (N_Factura.ID_Factura = @IdFactura)</CommandText>
             <Top>4.18365cm</Top>
             <Left>1.25cm</Left>
             <Height>1.29631cm</Height>
-            <Width>16.69999cm</Width>
+            <Width>16.69998cm</Width>
             <ZIndex>1</ZIndex>
             <Style />
           </Tablix>
@@ -2397,7 +2397,7 @@ WHERE        (N_Factura.ID_Factura = @IdFactura)</CommandText>
             <Width>1.75cm</Width>
             <ZIndex>3</ZIndex>
             <Visibility>
-              <Hidden>true</Hidden>
+              <Hidden>=Parameters!IrpfPorc.Value&gt;0</Hidden>
             </Visibility>
             <Style>
               <Border>
@@ -2432,7 +2432,7 @@ WHERE        (N_Factura.ID_Factura = @IdFactura)</CommandText>
             <Width>1.72752cm</Width>
             <ZIndex>4</ZIndex>
             <Visibility>
-              <Hidden>true</Hidden>
+              <Hidden>=Parameters!IrpfPorc.Value&gt;0</Hidden>
             </Visibility>
             <Style>
               <Border>
@@ -2467,7 +2467,7 @@ WHERE        (N_Factura.ID_Factura = @IdFactura)</CommandText>
             <Width>1.98413cm</Width>
             <ZIndex>5</ZIndex>
             <Visibility>
-              <Hidden>true</Hidden>
+              <Hidden>=Parameters!IrpfPorc.Value&gt;0</Hidden>
             </Visibility>
             <Style>
               <Border>
